updating index.html

--- a/index.html
+++ b/index.html
@@ -1,40 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Star Wars Quiz</title>
-    
-    <link rel="stylesheet" type="text/css" href="../TriviaGame/assets/style.css">
-    <script src="../TriviaGame/assets/app.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>The Star Wars Trivia Game</title>
+    <!-- CSS Reset Sheet -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css"
+    />
 
-</head>
-<body>
+    <!-- Out Own CSS Sheet -->
+    <link rel="stylesheet" href="assets/css/style.cssSolution" />
 
-    <div id="start">
-        <h1>Star Wars Quiz</h1>
-        <h2>May the Force be with You!</h2>
-        <a href="#">Start Quiz</a>
+    <!-- jQuery -->
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"
+    ></script>
+
+    <!-- Google Font -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Geo"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="animate.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
+    />
+  </head>
+
+  <body>
+    <div id="title">
+      <h1>The Star Wars Trivia Game!</h1>
+      <div id="startTitle">
+        <div id="quiz-area">
+          <button id="start">Start</button>
+        </div>
+      </div>
     </div>
 
-    <div class="quiz">
-        <h2>Question Title</h2>
-            <ul>
-                <li>choice</li>
-                <li>choice</li>
-                <li>choice</li>
-                <li>choice</li>
-            </ul>
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
+  </body>
 
-            <a href="#">Submit Answer</a>
-    </div>
-
-    <div class="summary">
-        <h2>Your score</h2>
-        <p>Congratulations! You have finished the Star Wars Quiz!</p>
-        <p>You scored x out of y correct!</p>
-        <a href="#">Restart Quiz!</a>
-    </div>
-    
-</body>
 </html>
